gcp/resources/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - dev.api.<your-domain>
    - test.api.<your-domain>
    - uat.api.<your-domain>

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: storefront-dev
spec:
  hosts:
  - dev.api.<your-domain>
  gateways:
  - storefront-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        port:
          number: 8080
        host: accounts.dev.svc.cluster.local
  - match:
    - uri:
        prefix: /fulfillment
    route:
    - destination:
        port:
          number: 8080
        host: fulfillment.dev.svc.cluster.local
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        port:
          number: 8080
        host: orders.dev.svc.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: storefront-test
spec:
  hosts:
  - test.api.<your-domain>
  gateways:
  - storefront-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        port:
          number: 8080
        host: accounts.test.svc.cluster.local
  - match:
    - uri:
        prefix: /fulfillment
    route:
    - destination:
        port:
          number: 8080
        host: fulfillment.test.svc.cluster.local
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        port:
          number: 8080
        host: orders.test.svc.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: storefront-uat
spec:
  hosts:
  - uat.api.<your-domain>
  gateways:
  - storefront-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        port:
          number: 8080
        host: accounts.uat.svc.cluster.local
  - match:
    - uri:
        prefix: /fulfillment
    route:
    - destination:
        port:
          number: 8080
        host: fulfillment.uat.svc.cluster.local
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        port:
          number: 8080
        host: orders.uat.svc.cluster.local
